# chicken-rs

./: Cargo.toml  README.md
examples/: README.md
src/: bin.rs  lib.rs  test.rs
